Update (missing import demos correction)

--- a/css/components/wordpress/shortcodes.less
+++ b/css/components/wordpress/shortcodes.less
@@ -16,4 +16,5 @@
 @import "shortcodes/music_player.less";
 @import "shortcodes/text_header.less";
 @import "shortcodes/social_video.less";
+@import "shortcodes/contact_form.less";
 
