--- a/plusquare_admin/config-backend/css/components/template_customizer/template_customizer.less
+++ b/plusquare_admin/config-backend/css/components/template_customizer/template_customizer.less
@@ -20,6 +20,15 @@
 .saving_cover{
     background-color: rgba(0, 0, 0, 0.3);
     
+    &.options_save{
+        div{
+            text-align:center;
+            p{
+                color: #111111;
+            }
+        }
+    }
+    
     position: fixed;
     width: 100%;
     height: 100%;
